--- a/public/views/partials/create.liquid
+++ b/public/views/partials/create.liquid
@@ -5,8 +5,17 @@
       the user's email address
     - password: string
       the user's password
+    - hook_params: object
+      the other params that will be passed to hook_user_create
 {% endcomment %}
 {% liquid
   graphql user = 'modules/user/create', email: email, password: password
+
+  unless user.errors
+    assign params = '{}' | parse_json | hash_merge: created_user: user.user, hook_params: hook_params
+    function results = 'modules/hook/fire', hook: 'user_create', params: params
+    hash_assign user['hook_results'] = results
+  endunless
+
   return user
 %}
