--- a/public/views/partials/lib/queries/user/load.liquid
+++ b/public/views/partials/lib/queries/user/load.liquid
@@ -11,7 +11,7 @@
     assign user = '{}' | parse_json
   endunless
   assign params = '{}' | parse_json | hash_merge: user: user
-  function results = 'modules/core/hook/fire', hook: 'user_load', params: params, merge_to_object: true
+  function results = 'modules/core/lib/commands/hook/fire', hook: 'user_load', params: params, merge_to_object: true
   hash_assign user['hook_results'] = results
   return user
 %}
