--- a/public/views/partials/lib/commands/user/delete.liquid
+++ b/public/views/partials/lib/commands/user/delete.liquid
@@ -5,7 +5,7 @@
       the user's id
 {% endcomment %}
 {% liquid
-  graphql user = 'modules/user/delete', id: id
+  graphql user = 'modules/user/user/delete', id: id
 
   unless user.errors
     assign params = '{}' | parse_json | hash_merge: user: user.user
