--- a/public/views/pages/admin/list.liquid
+++ b/public/views/pages/admin/list.liquid
@@ -3,14 +3,15 @@ slug: admin/users
 layout: modules/admin/application
 ---
 {% liquid
-  function current_user = 'modules/user/current'
-  include 'modules/permission/can_do_or_unauthorized', user: current_user, permission: 'users.manage'
+  function current_user = 'modules/user/lib/queries/user/current'
+  include 'modules/permission/lib/helpers/can_do_or_unauthorized', requester: current_user, do: 'users.manage'
 
-  function users = 'modules/user/get_all'
+  function users = 'modules/user/lib/queries/user/get_all'
 %}
 {% for user in users %}
   <div>
     <h3>{{ user.email }} (#{{ user.id }})</h3>
+    <code>{{ user }}</code>
     <h4>Hook implementations</h4>
     {% for hook in user.hook_results %}
       <p><strong>{{ hook[0] }}</strong></p>
