--- a/public/views/partials/lib/commands/user/create.liquid
+++ b/public/views/partials/lib/commands/user/create.liquid
@@ -1,5 +1,5 @@
 {% comment %}
-  Create a user.
+  Creates a user.
   Params:
     - email: string
       the user's email address
@@ -12,6 +12,11 @@
   graphql user = 'modules/user/user/create', email: email, password: password
 
   unless user.errors
+    function users_count = 'modules/user/lib/queries/user/count'
+    if users_count == 1
+      assign roles = 'superadmin' | split: ','
+      function user_role = 'modules/user/lib/commands/user_roles/create', user_id: user.user.id, roles: roles
+    endif
     assign params = '{}' | parse_json | hash_merge: created_user: user.user, hook_params: hook_params
     function results = 'modules/core/lib/commands/hook/fire', hook: 'user_create', params: params, merge_to_object: true
     hash_assign user['hook_results'] = results
