--- a/public/views/partials/lib/queries/user/get_all.liquid
+++ b/public/views/partials/lib/queries/user/get_all.liquid
@@ -1,5 +1,8 @@
+{% comment %}
+  Loads all users.
+{% endcomment %}
 {% liquid
-  graphql users_res = 'modules/user/user/user/list'
+  graphql users_res = 'modules/user/user/list'
   assign users = '[]' | parse_json
   for row in users_res.users.results
     function user = 'modules/user/lib/queries/user/load', id: row.id
