--- a/public/views/partials/lib/hooks/hook_admin_menu.liquid
+++ b/public/views/partials/lib/hooks/hook_admin_menu.liquid
@@ -5,7 +5,18 @@
 [
   {
     "title": "Users",
-    "url": "/admin/users"
+    "url": "/admin/users",
+    "permission": "users.manage"
+  },
+  {
+    "title": "Log out",
+    "url": "/sessions/destroy",
+    "permission": "sessions.destroy"
+  },
+  {
+    "title": "Log in",
+    "url": "/users/login",
+    "permission": "sessions.create"
   }
 ]
 {% endparse_json %}
