--- a/public/views/partials/lib/queries/role_permissions/get_all.liquid
+++ b/public/views/partials/lib/queries/role_permissions/get_all.liquid
@@ -15,6 +15,7 @@
   for row in defined_roles.records.results
     if row.role_name == 'anonymous'
       assign anonymous_declared = true
+      assign anonym_permissions = row.permissions
     endif
     if row.role_name == 'authenticated'
       assign authenticated_declared = true
@@ -23,25 +24,28 @@
     assign roles = roles | add_to_array: role
   endfor
 
-  comment
-    Superadmins should do everything.
-  endcomment
   function all_permissions = 'modules/permission/lib/queries/permission/get_all'
-  assign role = '{}' | parse_json | hash_merge: role_name: 'superadmin', permissions: all_permissions
-  assign roles = roles | prepend_to_array: role
+  assign auth_permissions = '["sessions.destroy"]' | parse_json
+  assign anonym_permissions = anonym_permissions | default: '["sessions.create"]' | parse_json
+
   comment
     Decalre the default roles.
   endcomment
   unless authenticated_declared
-    assign no_permissions = '[]' | parse_json
-    assign role = '{}' | parse_json | hash_merge: role_name: 'authenticated', permissions: no_permissions
+    assign role = '{}' | parse_json | hash_merge: role_name: 'authenticated', permissions: auth_permissions
     assign roles = roles | prepend_to_array: role
   endunless
   unless anonymous_declared
-    assign no_permissions = '[]' | parse_json
-    assign role = '{}' | parse_json | hash_merge: role_name: 'anonymous', permissions: no_permissions
+    assign role = '{}' | parse_json | hash_merge: role_name: 'anonymous', permissions: anonym_permissions
     assign roles = roles | prepend_to_array: role
   endunless
+
+  comment
+    Superadmins should do everything except anonymous ones.
+  endcomment
+  assign superadmin_permissions = all_permissions | array_subtract: anonym_permissions
+  assign role = '{}' | parse_json | hash_merge: role_name: 'superadmin', permissions: superadmin_permissions
+  assign roles = roles | prepend_to_array: role
 
   return roles
 %}
