Add empty roles for simple members

--- a/public/views/partials/lib/commands/user/verify_password.liquid
+++ b/public/views/partials/lib/commands/user/verify_password.liquid
@@ -8,5 +8,9 @@
 {% liquid
   graphql user = 'modules/user/user/verify_password', email: email, password: password
 
+  if user.errors
+    return user.errors
+  endif
+
   return user.users.results.first
 %}
