--- a/public/views/partials/lib/queries/user/load.liquid
+++ b/public/views/partials/lib/queries/user/load.liquid
@@ -17,7 +17,7 @@
 
   if user
     function user_roles = 'modules/user/lib/queries/user_roles/get', user_id: user.id
-    assign user_roles = user_roles.roles
+    assign user_roles = user_roles.roles | default: '[]' | parse_json
     if current
       assign user_roles = user_roles | add_to_array: 'authenticated'
     endif
