--- a/public/views/partials/lib/commands/session/create.liquid
+++ b/public/views/partials/lib/commands/session/create.liquid
@@ -14,7 +14,7 @@
   if user.authenticate.valid
     function user = 'modules/user/lib/queries/user/load', id: user.id
     sign_in_rc user_id: user.id
-    assign params = '{}' | parse_json | hash_merge: user: user.user, hook_params: hook_params
+    assign params = '{}' | parse_json | hash_merge: user: user, hook_params: hook_params
     function results = 'modules/core/lib/commands/hook/fire', hook: 'user_login', params: params, merge_to_object: true
     hash_assign user['hook_results'] = results
   endif
