Fix typo in changelog generation

--- a/changelog-template.hbs
+++ b/changelog-template.hbs
@@ -28,7 +28,7 @@ All notable changes to this project will be documented in this file. Dates are d
     {{#if breaking}}- {{subject}}{{#if href}} [`{{shorthash}}`]({{href}}){{/if}}{{/if}}
   {{/each}}
 
-  ## Merge pull requests
+  ## Merged pull requests
   {{#each merges}}
     - {{message}}{{#if href}} [`#{{id}}`]({{href}}){{/if}}
   {{/each}}
