Generate hook module info from template=values.json

--- a/public/views/partials/lib/hooks/hook_module_info.liquid
+++ b/public/views/partials/lib/hooks/hook_module_info.liquid
@@ -3,16 +3,14 @@
 {% endcomment %}
 {% parse_json info %}
 {
-  "name": "User",
-  "machine_name": "user",
-  "type": "module",
-  "version": "1.0.0",
-  "dependencies": [
-    "core",
-    "permission",
-    "admin"
-  ]
+  "name": "<%= &name =%>",
+  "machine_name": "<%= &machine_name =%>",
+  "type": "<%= &type =%>",
+  "version": "<%= &version =%>",
+  "dependencies": "<%= &dependencies =%>"
 }
 {% endparse_json %}
 
-{% return info %}
+{% liquid
+  return info
+%}
