--- a/public/views/partials/lib/hooks/hook_module_info.liquid
+++ b/public/views/partials/lib/hooks/hook_module_info.liquid
@@ -9,8 +9,7 @@
   "version": "1.0.0",
   "dependencies": [
     "core",
-    "permission",
-    "admin"
+    "permission"
   ]
 }
 {% endparse_json %}
