Define users.register permission and use it before registrtion

--- a/public/views/partials/lib/hooks/hook_permission.liquid
+++ b/public/views/partials/lib/hooks/hook_permission.liquid
@@ -2,6 +2,6 @@
   Implements hook_permission.
 {% endcomment %}
 {% liquid
-  assign permissions = '["users.manage", "sessions.create",  "sessions.destroy"]' | parse_json
+  assign permissions = '["users.manage", "users.register", "sessions.create",  "sessions.destroy"]' | parse_json
   return permissions
 %}
