--- a/public/views/pages/users/register.liquid
+++ b/public/views/pages/users/register.liquid
@@ -4,6 +4,9 @@ slug: users/register
 ---
 
 {% liquid
+  function current_user = 'modules/user/lib/queries/user/current'
+  include 'modules/permission/lib/helpers/can_do_or_unauthorized', requester: current_user, do: 'users.register'
+
   function res = 'modules/user/lib/commands/user/create', email: params.email, password: params.password, hook_params: params
   assign redirect_path = res.hook_results.redirect_to | default: params.redirect_to | default: '/'
   redirect_to redirect_path
