--- a/public/views/partials/lib/queries/role_permissions/get_all.liquid
+++ b/public/views/partials/lib/queries/role_permissions/get_all.liquid
@@ -26,7 +26,7 @@
 
   function all_permissions = 'modules/permission/lib/queries/permission/get_all'
   assign auth_permissions = '["sessions.destroy"]' | parse_json
-  assign anonym_permissions = anonym_permissions | default: '["sessions.create"]' | parse_json
+  assign anonym_permissions = anonym_permissions | default: '["sessions.create", "users.register"]' | parse_json
 
   comment
     Decalre the default roles.
