Use build/check in pw verify

--- a/public/views/partials/lib/commands/user/verify_password.liquid
+++ b/public/views/partials/lib/commands/user/verify_password.liquid
@@ -6,11 +6,8 @@
     - password: string
 {% endcomment %}
 {% liquid
-  graphql user = 'modules/user/user/verify_password', email: email, password: password
+  function object = 'modules/user/lib/commands/user/verify_password/build', email: email, password: password
+  function object = 'modules/user/lib/commands/user/verify_password/check', object: object
 
-  if user.errors
-    return user.errors
-  endif
-
-  return user.users.results.first
+  return object
 %}
