--- a/public/views/partials/lib/queries/user/load.liquid
+++ b/public/views/partials/lib/queries/user/load.liquid
@@ -37,5 +37,10 @@
   assign params = '{}' | parse_json | hash_merge: user: user
   function results = 'modules/core/lib/commands/hook/fire', hook: 'user_load', params: params, merge_to_object: true
   hash_assign user['hook_results'] = results
+
+  assign params_to_modify = '{}' | parse_json | hash_merge: user: user
+  assign params = '{}' | parse_json | hash_merge: user: user
+  function _ = 'modules/core/lib/commands/hook/alter', hook: 'user_load', params_to_modify: params_to_modify, params: params
+
   return user
 %}
