--- a/public/views/partials/lib/queries/user/load.liquid
+++ b/public/views/partials/lib/queries/user/load.liquid
@@ -12,7 +12,7 @@
     assign user_id = context.current_user.id
   endif
 
-  if user_id
+  if user_id != blank
     graphql users = 'modules/user/user/load', id: user_id
     assign user = users.users.results.first
   endif
