--- a/public/views/partials/lib/queries/registration_fields/load.liquid
+++ b/public/views/partials/lib/queries/registration_fields/load.liquid
@@ -12,7 +12,7 @@
     "required": true,
     "type": "email",
     "weight": 0,
-    "label": "E-mail"
+    "label": "Email"
   },
   {
     "name": "password",
@@ -22,7 +22,7 @@
     "label": "Password"
   }
 ]
-{% endparse_json %}  
+{% endparse_json %}
 {% liquid
   assign params_to_modify = '{}' | parse_json | hash_merge: fields: fields
   assign params = '{}' | parse_json | hash_merge: hook_params: hook_params
