--- a/public/views/partials/lib/queries/user/load.liquid
+++ b/public/views/partials/lib/queries/user/load.liquid
@@ -8,6 +8,12 @@
 {% endcomment %}
 {% liquid
   assign user_id = id
+
+  # Set current flag.
+  if id and id == context.current_user.id
+    assign current = true
+  endif
+
   if current
     assign user_id = context.current_user.id
   endif
