--- a/public/views/partials/lib/commands/user/create.liquid
+++ b/public/views/partials/lib/commands/user/create.liquid
@@ -22,7 +22,7 @@
       endif
       assign params = '{}' | parse_json | hash_merge: created_user: user.user, hook_params: hook_params
       function results = 'modules/core/lib/commands/hook/fire', hook: 'user_create', params: params, merge_to_object: true
-      hash_assign user['hook_results'] = results
+      hash_assign object['hook_results'] = results
     endunless
   endif
 
