--- a/public/views/partials/lib/commands/user/create.liquid
+++ b/public/views/partials/lib/commands/user/create.liquid
@@ -22,6 +22,15 @@
       endif
       assign params = '{}' | parse_json | hash_merge: created_user: user.user, hook_params: hook_params
       function results = 'modules/core/lib/commands/hook/fire', hook: 'user_create', params: params, merge_to_object: true
+      for result in results
+        if result[1].valid == false
+          function delete = 'modules/user/lib/commands/user/delete', id: user.user.id
+          hash_assign object['valid'] = false
+          hash_assign object['errors'] = 'Error in the hook_user_create results. Handling transaction by running user delete command'
+          hash_assign object['delete_result'] = delete
+          break
+        endif
+      endfor
       hash_assign object['hook_results'] = results
     endunless
   endif
