--- a/public/views/partials/lib/queries/user/load.liquid
+++ b/public/views/partials/lib/queries/user/load.liquid
@@ -18,14 +18,14 @@
     assign user_id = context.current_user.id
   endif
 
-  if user_id != blank
+  if user_id
     graphql users = 'modules/user/user/load', id: user_id
     assign user = users.users.results.first
   endif
 
   if user
-    function user_roles = 'modules/user/lib/queries/user_roles/get', user_id: user.id
-    assign user_roles = user_roles.roles | default: '[]' | parse_json
+    # TODO: do we need seperate table for this?
+    assign user_roles = user.user_roles.roles | default: '[]' | parse_json
     if current
       assign user_roles = user_roles | add_to_array: 'authenticated'
     endif
