--- a/public/views/partials/lib/queries/user/load.liquid
+++ b/public/views/partials/lib/queries/user/load.liquid
@@ -38,11 +38,12 @@
     endif
   endif
 
+  # TODO: do we need table to store permissions for role? can we use liquid?
   function permissions = 'modules/user/lib/queries/user/get_permissions', user: user
   hash_assign user['permissions'] = permissions
 
-
   assign params = '{}' | parse_json | hash_merge: user: user
+  # log 1, type: 'user/load hook'
   function results = 'modules/core/lib/commands/hook/fire', hook: 'user_load', params: params, merge_to_object: true
   hash_assign user['hook_results'] = results
 
