--- a/public/views/partials/lib/commands/user/create.liquid
+++ b/public/views/partials/lib/commands/user/create.liquid
@@ -27,7 +27,7 @@
         if result[1].valid == false
           function delete = 'modules/user/lib/commands/user/delete', id: user.user.id
           hash_assign object['valid'] = false
-          hash_assign object['errors'] = 'Error in the hook_user_create results. Handling transaction by running user delete command'
+          hash_assign object['errors'] = result[1].errors
           hash_assign object['delete_result'] = delete
           break
         endif
