--- a/public/views/partials/lib/commands/user/update.liquid
+++ b/public/views/partials/lib/commands/user/update.liquid
@@ -19,6 +19,13 @@
     unless user.errors
       assign params = '{}' | parse_json | hash_merge: updated_user: user.user, hook_params: hook_params
       function results = 'modules/core/lib/commands/hook/fire', hook: 'user_update', params: params, merge_to_object: true
+      for result in results
+        if result[1].valid == false
+          hash_assign object['valid'] = false
+          hash_assign object['errors'] = result[1].errors
+          break
+        endif
+      endfor
       hash_assign object['hook_results'] = results
     endunless
   endif
