--- a/public/views/partials/lib/commands/user/create.liquid
+++ b/public/views/partials/lib/commands/user/create.liquid
@@ -22,13 +22,17 @@
         function user_role = 'modules/user/lib/commands/user_roles/create', user_id: user.user.id, roles: roles
       endif
       assign params = '{}' | parse_json | hash_merge: created_user: user.user, hook_params: hook_params
+      # todo: merge_to_object for hooks with the same name will overwrite the validity of previous results
       function results = 'modules/core/lib/commands/hook/fire', hook: 'user_create', params: params, merge_to_object: true
       for result in results
-        if result[1].valid == false
+        # using the errors key for a quick workaround for now
+        if result[1].valid == false or result[1].errors != blank
           function delete = 'modules/user/lib/commands/user/delete', id: user.user.id
           hash_assign object['valid'] = false
           hash_assign object['errors'] = result[1].errors
           hash_assign object['delete_result'] = delete
+          graphql _ = 'sessions/destroy'
+          session profile = null
           break
         endif
       endfor
