--- a/public/views/partials/lib/queries/user/load.liquid
+++ b/public/views/partials/lib/queries/user/load.liquid
@@ -18,31 +18,32 @@
     assign user_id = context.current_user.id
   endif
 
-  if user_id != blank
+  if user_id
     graphql users = 'modules/user/user/load', id: user_id
     assign user = users.users.results.first
   endif
 
   if user
-    function user_roles = 'modules/user/lib/queries/user_roles/get', user_id: user.id
-    assign user_roles = user_roles.roles | default: '[]' | parse_json
+    # TODO: do we need seperate table for this?
+    assign roles = user.user_role.roles | default: '[]' | parse_json
     if current
-      assign user_roles = user_roles | add_to_array: 'authenticated'
+      assign roles = roles | add_to_array: 'authenticated'
     endif
-    hash_assign user['roles'] = user_roles
+    hash_assign user['roles'] = roles
   else
     assign user = '{"roles": []}' | parse_json
     if current
-      assign user_roles = 'anonymous' | split: ','
-      hash_assign user['roles'] = user_roles
+      assign roles = 'anonymous' | split: ','
+      hash_assign user['roles'] = roles
     endif
   endif
 
+  # TODO: do we need table to store permissions for role? can we use liquid?
   function permissions = 'modules/user/lib/queries/user/get_permissions', user: user
   hash_assign user['permissions'] = permissions
 
-
   assign params = '{}' | parse_json | hash_merge: user: user
+  # log 1, type: 'user/load hook'
   function results = 'modules/core/lib/commands/hook/fire', hook: 'user_load', params: params, merge_to_object: true
   hash_assign user['hook_results'] = results
 
