--- a/public/views/partials/lib/commands/user/create/check.liquid
+++ b/public/views/partials/lib/commands/user/create/check.liquid
@@ -1,6 +1,7 @@
 {% liquid
   assign c = '{ "errors": {}, "valid": true }' | parse_json
 
+  function c = 'modules/core/lib/validations/presence', c: c, object: object, field_name: 'password'
   function c = 'modules/core/lib/validations/presence', c: c, object: object, field_name: 'email', key: 'modules/user/validation.email.required'
   function c = 'modules/core/lib/validations/email', c: c, object: object, field_name: 'email', key: 'modules/user/validation.email.format'
 
