--- a/modules/user/public/lib/queries/role_permissions/get_all.liquid
+++ b/modules/user/public/lib/queries/role_permissions/get_all.liquid
@@ -2,7 +2,7 @@
   Gets roles and permissions matrix.
 {% endcomment %}
 {% liquid
-  function roles = 'users/permissions'
+  function roles = 'modules/user/queries/role_permissions/permissions'
   function default_roles = 'modules/user/queries/role_permissions/get_defaults'
 
   unless roles['authenticated']
