--- a/modules/user/public/views/partials/components/organisms/new-password.liquid
+++ b/modules/user/public/views/partials/components/organisms/new-password.liquid
@@ -17,14 +17,14 @@ metadata:
   assign values = values | default: params.values
   assign classes = classes | default: params.classes
   assign submit = submit | default: params.submit
-  assign default_submit = 'passwords.password_update' | t
+  assign default_submit = 'modules/user/passwords.password_update' | t
   assign submit = submit | default: default_submit
 %}
 <form action="{{action}}" method="post" class="classes" data-tc="change-password" autocomplete="off">
 
   {% liquid
     assign input_params = '{}' | parse_json | hash_merge: name: 'password[password]', required: true, type: 'password', classes: "w-full"
-    assign label = 'passwords.password' | t
+    assign label = 'modules/user/passwords.password' | t
     assign label_params = '{}' | parse_json | hash_merge: content: label
     assign validation = '{}' | parse_json
     if errors['password']
@@ -37,7 +37,7 @@ metadata:
 
   {% liquid
     assign input_params = '{}' | parse_json | hash_merge: name: 'password[password_confirmation]', required: true, type: 'password', classes: "w-full"
-    assign label = 'passwords.password_confirmation' | t
+    assign label = 'modules/user/passwords.password_confirmation' | t
     assign label_params = '{}' | parse_json | hash_merge: content: label
     assign validation = '{}' | parse_json
     if errors['password_confirmation']
