--- a/modules/user/public/views/partials/components/organisms/register.liquid
+++ b/modules/user/public/views/partials/components/organisms/register.liquid
@@ -24,12 +24,12 @@ metadata:
   assign registration_fields = registration_fields | default: params.registration_fields
   assign classes = classes | default: params.classes
   assign submit = submit | default: params.submit
-  assign default_submit = 'passwords.register' | t
+  assign default_submit = 'modules/user/passwords.register' | t
   assign submit = submit | default: default_submit
 %}
 
 <form action="{{action}}" method="{{method}}" class="{{classes}}" data-tc="register-user">
-  {% render 'authenticity_token' %}
+  {% render 'modules/user/authenticity_token' %}
 
   {% for field in registration_fields %}
     {% liquid
@@ -49,7 +49,7 @@ metadata:
     %}
   {% endfor %}
 
-  {% render 'hcaptcha', object: object %}
+  {% theme_render_rc 'components/molecules/hcaptcha', object: object %}
 
   <fieldset class="mt-5">
     {% theme_render_rc 'components/atoms/button', content: submit, type: 'submit' %}
