--- a/modules/user/public/views/partials/components/organisms/reset-password.liquid
+++ b/modules/user/public/views/partials/components/organisms/reset-password.liquid
@@ -16,15 +16,15 @@ metadata:
   assign values = values | default: params.values
   assign classes = classes | default: params.classes
   assign submit = submit | default: params.submit
-  assign default_submit = 'passwords.reset_password' | t
+  assign default_submit = 'modules/user/passwords.reset_password' | t
   assign submit = submit | default: default_submit
 %}
 <form action="{{action}}" method="post" class="classes" data-tc="create-authentication-link">
     {% liquid
     assign input_params = null | hash_merge: name: 'authentication_link[email]', required: true, type: 'email', value: params.values.email, classes: "w-full"
 
-    assign email = 'passwords.email' | t
-    assign desc = 'passwords.email_desc' | t
+    assign email = 'modules/user/passwords.email' | t
+    assign desc = 'modules/user/passwords.email_desc' | t
     assign label_params = null | hash_merge: content: email
     assign description_params = null | hash_merge: content: desc
     assign validation = '{}' | parse_json
