Fix login and logout

--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -3,6 +3,13 @@
 %}
 {% if current_user.id %}
   current_user: {{ current_user }}
+  <form action="/sessions" method="post">
+    {% render 'modules/user/authenticity_token', context: context %}
+    <input type="hidden" name="_method" value="delete" />
+    <button type="submit">
+      {{ 'modules/user/users.logout' | t }}
+    </button>
+  </form>
 {% else %}
   <a href="/users/new">Register</a><br/>
   <a href="/sessions/new">Log in</a>
