--- a/modules/user/public/lib/commands/passwords/create/check.liquid
+++ b/modules/user/public/lib/commands/passwords/create/check.liquid
@@ -4,7 +4,7 @@
   function c = 'lib/validations/presence', c: c, object: object, field_name: 'id'
   function c = 'lib/validations/presence', c: c, object: object, field_name: 'password'
   function c = 'lib/validations/presence', c: c, object: object, field_name: 'password_confirmation'
-  function c = 'lib/validations/equal', c: c, given: object.password, expected: object.password_confirmation, field_name: 'password_confirmation', key: 'app.errors.do_not_match', not_verbose: true
+  function c = 'lib/validations/equal', c: c, given: object.password, expected: object.password_confirmation, field_name: 'password_confirmation', key: 'modules/user/validation.password.do_not_match', not_verbose: true
   function c = 'lib/validations/password_complexity', c: c, object: object
 
   hash_assign object['valid'] = c.valid
