--- a/modules/user/public/lib/commands/session/create/check.liquid
+++ b/modules/user/public/lib/commands/session/create/check.liquid
@@ -1,7 +1,7 @@
 {% liquid
   assign c = '{ "errors": {}, "valid": true }' | parse_json
 
-  function c = 'modules/core/validations/presence', c: c, object: object, field_name: 'id', key: 'validation.blank'
+  function c = 'modules/core/validations/presence', c: c, object: object, field_name: 'id'
 
   hash_assign object['valid'] = c.valid
   hash_assign object['errors'] = c.errors
