Fix reset password

--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -12,5 +12,6 @@
   </form>
 {% else %}
   <a href="/users/new">Register</a><br/>
-  <a href="/sessions/new">Log in</a>
+  <a href="/sessions/new">Log in</a><br/>
+  <a href="/passwords/reset">Reset password</a>
 {% endif %}
