--- a/modules/user/public/views/partials/components/organisms/reset-password.liquid
+++ b/modules/user/public/views/partials/components/organisms/reset-password.liquid
@@ -3,7 +3,7 @@ metadata:
   name: Reset password form
   params:
     context: {}
-    action: '/authentication_links/create'
+    action: '/authentication_links'
     redirect_to: '/'
     errors: {}
     values: {}
