--- a/modules/user/public/views/pages/passwords/create.liquid
+++ b/modules/user/public/views/pages/passwords/create.liquid
@@ -4,17 +4,16 @@ method: post
 ---
 {% liquid
   assign input = context.params.password
-  assign redirect_url = context.params.redirect_to | default: '/feed'
+  assign redirect_url = context.params.redirect_to | default: '/'
   hash_assign input['user_id'] = context.session.reset_password_session_user_id
 
-  function object = 'lib/commands/passwords/create', object: input
-
+  function object = 'modules/user/commands/passwords/create', object: input
   if object.valid
     session reset_password_session_user_id = null
 
     function _ = 'modules/user/commands/session/create', user_id: object.id, validate_password: false
     redirect_to redirect_url
   else
-    theme_render_rc 'components/pages/new-password', context: context, errors: object.errors
+    theme_render_rc 'modules/user/passwords/new', context: context, errors: object.errors
   endif
 %}
