--- a/modules/user/public/views/pages/passwords/edit.liquid
+++ b/modules/user/public/views/pages/passwords/edit.liquid
@@ -1,3 +1,3 @@
 {% liquid
-  include 'lib/must_be_valid_token', token: context.params.token, email: context.params.email
+  include 'modules/user/helpers/must_be_valid_token', token: context.params.token, email: context.params.email
 %}
