--- a/modules/user/public/views/partials/passwords/reset.liquid
+++ b/modules/user/public/views/partials/passwords/reset.liquid
@@ -12,7 +12,7 @@ metadata:
   theme_render_rc 'components/molecules/pagetitle', content: pageTitle, classes: 'text-center'
 %}
 {% capture pwdResetCardContent %}
-  {% theme_render_rc 'components/organisms/reset-password', action: '/authentication_links/create', context: context, errors: errors, classes: 'form--reset-password' %}
+  {% theme_render_rc 'components/organisms/reset-password', action: '/authentication_links', context: context, errors: errors, classes: 'form--reset-password' %}
 {% endcapture %}
 
 <section class="container my-auto">
