Fix translations; fix flash messages on password reset

--- a/modules/user/public/lib/commands/emails/auth-link.liquid
+++ b/modules/user/public/lib/commands/emails/auth-link.liquid
@@ -9,8 +9,8 @@ metadata:
 {% parse_json object %}
   {
     "to": {{ object.email | json }},
-    "from": {% print 'app.from_email' | t | json %},
-    "subject": {% print 'app.emails.passwords.reset.subject' | t | json %},
+    "from": {% print 'modules/user/from_email' | t | json %},
+    "subject": {% print 'modules/user/emails.passwords.reset.subject' | t | json %},
     "partial": "modules/user/emails/passwords/reset",
     "layout": null,
     "data": {
