--- a/modules/user/public/lib/helpers/must_be_valid_token.liquid
+++ b/modules/user/public/lib/helpers/must_be_valid_token.liquid
@@ -1,17 +1,19 @@
 {% liquid
   if token == blank or email == blank
-    function _ = 'modules/user/helpers/flash', error: 'app.errors.unauthenticated'
+    function _ = 'modules/user/helpers/flash', error: 'modules/user/errors.unauthenticated'
     redirect_to '/sessions/new'
   endif
 
   function user = 'modules/user/queries/user/find', email: email
-  assign authenticated = token | is_token_valid: user.id
-  if authenticated
+  if user
+    assign authenticated = token | is_token_valid: user.id
+  endif
+  if user and authenticated
     session reset_password_session_user_id = user.id
 
     redirect_to '/passwords/new'
   else
-    function _ = 'modules/user/helpers/flash', error: 'app.account.reset_password.expired_link'
+    function _ = 'modules/user/helpers/flash', error: 'modules/user/account.reset_password.expired_link'
     redirect_to '/sessions/new'
   endif
 %}
