--- a/modules/user/public/views/pages/authentication_links/create.liquid
+++ b/modules/user/public/views/pages/authentication_links/create.liquid
@@ -12,18 +12,18 @@ slug: authentication_links
         break
       endif
 
-      function _ = 'modules/user/helpers/flash', notice: 'app.authentication_links.created'
+      function _ = 'modules/user/helpers/flash', notice: 'modules/user/authentication_links.created'
       redirect_to '/'
     else
       log email.errors, type: 'ERROR: authentication_links/create email'
 
-      function _ = 'modules/user/helpers/flash', notice: 'app.errors.something_went_wrong'
+      function _ = 'modules/user/helpers/flash', notice: 'modules/user/authentication_links.something_went_wrong'
       redirect_to '/'
     endif
   elsif object.token == blank
     log object, type: 'reset-password-user-not-found'
 
-    function _ = 'modules/user/helpers/flash', notice: 'app.authentication_links.created'
+    function _ = 'modules/user/helpers/flash', notice: 'modules/user/authentication_links.created'
     redirect_to '/'
   else
     theme_render_rc 'modules/user/passwords/reset', context: context, errors: object.errors
