--- a/modules/user/public/views/partials/components/organisms/reset-password.liquid
+++ b/modules/user/public/views/partials/components/organisms/reset-password.liquid
@@ -35,7 +35,7 @@ metadata:
     theme_render_rc 'components/molecules/formfield', label_params: label_params, input_params: input_params, description_params: description_params, validation: validation, classes: "mb-6"
   %}
 
-  {% theme_render_rc 'components/atoms/input', params: name: 'authenticity_token', type: 'hidden', value: context.authenticity_token %}
+  {% render 'modules/core/helpers/authenticity_token', context: context %}
 
   {% theme_render_rc 'components/atoms/input', name: 'redirect_to', type: 'hidden', value: redirect_to %}
 
