--- a/modules/user/public/views/partials/emails/passwords/reset.liquid
+++ b/modules/user/public/views/partials/emails/passwords/reset.liquid
@@ -1,16 +1,16 @@
-<h1 class="title">{{ 'app.emails.passwords.reset.title' | t }}</h1>
+<h1 class="title">{{ 'modules/user/emails.passwords.reset.title' | t }}</h1>
 
-<p>{{ 'app.emails.passwords.reset.content' | t }}</p>
-<p>{{ 'app.emails.passwords.reset.ignore' | t }}</p>
+<p>{{ 'modules/user/emails.passwords.reset.content' | t }}</p>
+<p>{{ 'modules/user/emails.passwords.reset.ignore' | t }}</p>
 
 <table class="card cta">
   <tr>
     <td>
 
-      <h2 class="subtitle">{{ 'app.emails.passwords.reset.cta' | t }}</h2>
+      <h2 class="subtitle">{{ 'modules/user/emails.passwords.reset.cta' | t }}</h2>
 
       <a href="{{ data.url }}" class="button">
-        {{ 'app.emails.passwords.reset.cta_button' | t }}
+        {{ 'modules/user/emails.passwords.reset.cta_button' | t }}
       </a>
 
     </td>
