--- a/modules/user/public/lib/queries/role_permissions/permissions.liquid
+++ b/modules/user/public/lib/queries/role_permissions/permissions.liquid
@@ -1,7 +1,6 @@
 {% parse_json data %}
 {
-  "authenticated": [
-  ],
+  "authenticated": [],
   "member": [
     "sessions.destroy",
     "site.access",
