--- a/modules/user/public/lib/commands/user/create/check.liquid
+++ b/modules/user/public/lib/commands/user/create/check.liquid
@@ -2,6 +2,7 @@
   assign c = '{ "errors": {}, "valid": true }' | parse_json
 
   function c = 'modules/core/validations/presence', c: c, object: object, field_name: 'password'
+  function c = 'modules/core/validations/password_complexity', c: c, object: object, field_name: 'password'
   function c = 'modules/core/validations/presence', c: c, object: object, field_name: 'email', key: 'modules/user/validation.email.required'
   function c = 'modules/core/validations/email', c: c, object: object, field_name: 'email', key: 'modules/user/validation.email.format'
 
